cluster/gitops/system-controllers/k8tz/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k8tz
specs:
  - description: k8tz
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: k8tz
    egress:
      # Call k8s to watch for when the webhook cert changes
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
    ingress:
      - fromEntities:
          # Kubelet for healthcheck
          - host
          # Webhook calls from k8s API
          - kube-apiserver
        toPorts:
          - ports:
              - port: https
                protocol: TCP
